--- a/Landningssida/style.css
+++ b/Landningssida/style.css
@@ -220,7 +220,7 @@ body {
   border: 1px solid black;
 }
 
-/* <!-- FOOTER SEKTION --> */
+/* <!-- FOOTER SEKTION  2--> */
 
 .footer-section {
   position: relative;
